--- a/src/app/cdk-accordion-overview-example.scss
+++ b/src/app/cdk-accordion-overview-example.scss
@@ -1,14 +1,27 @@
+.titleIcon{
+  position: relative;
+  top: 5px;
+}
+
+:host{
+  cdk-accordion-item{
+    margin-top: 5px;
+  }
+}
+
 .example-accordion {
   display: block;
   max-width: 500px;
+
 }
 
 .example-accordion-item {
   display: block;
 }
 
-.example-accordion-item + .example-accordion-item {
-  border-top: none;
+.example-accordion-item  {
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 .example-accordion-item-header {
@@ -31,12 +44,4 @@
   cursor: pointer;
 }
 
-.example-accordion-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
 
-.example-accordion-item:last-child {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
